- time alignment fix for case 309

--- a/src/components/BettingWidgets/SimpleBettingWidget/SimpleBettingWidget.less
+++ b/src/components/BettingWidgets/SimpleBettingWidget/SimpleBettingWidget.less
@@ -80,7 +80,6 @@ div.simple-betting {
         &.event-time {
           word-break: break-word;
           font-weight:bold;
-          vertical-align: top;
         }
         &.event-name {
           font-size: 14px;
